--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>병역일터 공고검색/업체검색</title>
+  <title>병역일터 공고검색</title>
 </head>
 
 <body>
