--- a/front/index.html
+++ b/front/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7159955921423638" crossorigin="anonymous"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MQ2VXEL8QT"></script>
   <script>
